--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -23,8 +23,9 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/iv_icon"
         android:maxLines="1"
-        android:paddingTop="16dp"
+        android:paddingTop="10dp"
         android:textAppearance="?attr/textAppearanceSubtitle1"
+        android:textSize="20sp"
         tools:text="HOLA" />
 
     <TextView
